simple-payment/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-payment
  labels:
    app: simple-payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-payment
  template:
    metadata:
      labels:
        app: simple-payment
    spec:
      containers:
      - name: nginx
        image: nginx:1.24
        ports:
        - containerPort: 80
        volumeMounts:
        - name: redirect
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: redirect.conf
      volumes:
      - name: redirect
        configMap:
          name: redirect
