simple-payment/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-payment
spec:
  selector:
    app: simple-payment
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
